--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="content-side shadow">
                       <div class="inner-wrapper">
                         <h2 class="title">Boqing Gong</h2>
-                        <h2 class="subtitle">Principal Researcher, Ph.D.<span class="text-uppercase">Tencent AI Lab</span></h2>
+                        <h2 class="subtitle">Ph.D.<span class="text-uppercase"></span></h2>
                       </div>
                     </div>
                   </div>
@@ -140,7 +140,10 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>A social psychologist and marketer, Jennifer Doe is the General Atlantic Professor of Marketing and Ormond Family Faculty at Stanford University’s Graduate School of Business. Her research spans time, money and happiness. She focuses on questions such as: What actually makes people happy, as opposed to what they think makes them happy?</p>
+                    <p>A research scientist in machine learning and computer vision, Boqing Gong is a Principal Researcher in the Tencent AI Lab at Seattle. Before this, he spent two and a half years in University of Central Florida as a tenure-track Assistant Professor. He is interested in developing data-efficient learning algorithms
+
+
+                    the General Atlantic Professor of Marketing and Ormond Family Faculty at Stanford University’s Graduate School of Business. Her research spans time, money and happiness. She focuses on questions such as: What actually makes people happy, as opposed to what they think makes them happy?</p>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor.sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                   </div>
                   <div class="col-md-3">
@@ -197,18 +200,18 @@
                 </div>
               </div>
             </section>
-            <!--section class="section">
+            <section class="section">
               <div class="container">
                 <div class="row">
                   <div class="col-md-3">
                     <div class="heading-with-sub">
                       <h3 class="title with-sideline">Research</h3>
-                      <p class="lead">My research lies at the intersection of machine learning and computer vision and has been focusing on domain adaptation, deep/zero-shot/semi-supervised learning, and visual analytics of objects, scenes, attributes, and human activities.</p>
+                      <p class="lead"> A research scientist in machine learning and computer vision, I am interested in developing data-efficient algorithms to solve large-scale visual recognition problems. My recent research has been focusing on domain adaptation, semi-supervised and self-supervised learning, few-shot and zero-shot learning, deep learning, generative models, learning from the Web, and the visual analytics of objects, human activities, scenes, and their attributes.</p>
                     </div><a class="btn btn-small btn-round m-top-5"><span>read more</span></a>
                   </div>
                   <div class="col-md-9">
                     <div data-cols="3" data-nav="true" data-margin="30" data-cols-md='2' class="owl-carousel items featured-items owwwlab-theme nav-top-right"><a href="#" class="featured-item boxed">
-                        <div class="features-image"><img src="assets/img/featured-items/01.jpg" alt="image"></div>
+                        <div class="features-image"><img src="assets/img/featured-items/01.jpg" alt="Domain Adaptation / Transfer Learning"></div>
                         <h3 class="features-title">Domain Adaptation/Transfer Learning</h3></a><a href="#" class="featured-item boxed">
                         <div class="features-image"><img src="assets/img/featured-items/02.jpg" alt="image"></div>
                         <h3 class="features-title">Zero-/Few-shot Learning</h3></a><a href="#" class="featured-item boxed">
@@ -225,7 +228,7 @@
                   </div>
                 </div>
               </div>
-            </section-->
+            </section>
             <!--section class="bg-gray no-space-grid">
               <div class="container">
                 <div class="row extend-bg-wrapper no-space-grid h-500">
