--- a/publications.html
+++ b/publications.html
@@ -119,21 +119,21 @@ http://themeforest.net/user/owwwlab/
             <section class="section section-narrow slim-container bg-gray">
               <div class="container">
                 <div class="row pull-up-160">
-                  <div class="col-md-4"><a href="#" class="book-el set-bg"><img src="assets/img/publications/grid/01.jpg" class="set-me">
+                  <div class="col-md-4"><a href="papers/cvpr12.pdf" class="book-el set-bg"><img src="assets/img/publications/grid/01.jpg" class="set-me">
                       <div class="contents">
                         <div class="item-meta"><span class="date">2012</span></div>
                         <div class="title-wrapper">
                           <h2 class="title">Geodesic Flow Kernel (GFK)</h2>
                         </div>
                       </div></a></div>
-                  <div class="col-md-4"><a href="#" class="book-el set-bg"><img src="assets/img/publications/grid/02.jpg" class="set-me">
+                  <div class="col-md-4"><a href="https://papers.nips.cc/paper/5413-diverse-sequential-subset-selection-for-supervised-video-summarization" class="book-el set-bg"><img src="assets/img/publications/grid/02.jpg" class="set-me">
                       <div class="contents">
                         <div class="item-meta"><span class="date">2014</span></div>
                         <div class="title-wrapper">
                           <h2 class="title">Sequential Determinantal Point Process (SeqDPP)</h2>
                         </div>
                       </div></a></div>
-                  <div class="col-md-4"><a href="#" class="book-el set-bg"><img src="assets/img/publications/grid/03.jpg" class="set-me">
+                  <div class="col-md-4"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html" class="book-el set-bg"><img src="assets/img/featured-items/01.jpg" class="set-me">
                       <div class="contents">
                         <div class="item-meta"><span class="date">2017</span></div>
                         <div class="title-wrapper">
@@ -148,10 +148,17 @@ http://themeforest.net/user/owwwlab/
                 <div class="ol-timeline scrollable-timeline">
 
                   <div class="tl-item pub-item">
-                    <div class="content-wrapper">
+                    <!--div class="content-wrapper"-->
                       <h2 class="title">Remark 1: * indicates papers whose first authors are the students whom I supervised or co-supervised. </h2>
                       <h2 class="title"> Remark 2: = indicates equal contribution among authors.</h2>
-                    </div>
+                      &nbsp&nbsp&nbsp&nbsp
+                      <a href="https://scholar.google.com/citations?user=lv9ZeVUAAAAJ&hl=en"><img src="assets/img/publications/series/google-scholar.png" alt="Google Scholar" class="pub-thumbnail" height="40" width="40"></a>
+                      &nbsp&nbsp&nbsp&nbsp
+                      <a href="https://www.semanticscholar.org/author/Boqing-Gong/1760838"><img src="assets/img/publications/series/semantic-scholar.jpg" alt="Semantic Scholar" class="pub-thumbnail" height="40" width="40"></a>
+                      &nbsp&nbsp&nbsp&nbsp
+                      <a href="http://dblp.uni-trier.de/pers/hd/g/Gong:Boqing"><img src="assets/img/publications/series/dblp.png" alt="DBLP" class="pub-thumbnail" height="40" width="40"></a>
+                      <div class="description"></div>
+                    <!--/div-->
                   </div>
 
                   <div class="tl-item active pub-item"><span class="item-section">Working papers</span>
@@ -396,7 +403,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="papers/cvpr12.pdf">Geodesic Flow Kernel for Unsupervised Domain Adaptation </a><a href="papers/cvpr12-supp.pdf">[Supp]</a> <a href="papers/cvpr12-slides.pptx">[Slides]</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/cvpr12.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR, Oral)</b>, 2012 </a><span class="block-elem"><b>B Gong</b>, F Sha, and K Grauman</span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr12.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR, Oral)</b>, 2012 </a><span class="block-elem"><b>B Gong</b>, Y Shi, F Sha, and K Grauman</span></span></div>
                       </div>
                     </div>
                   </div>
@@ -463,7 +470,7 @@ http://themeforest.net/user/owwwlab/
               <div class="col-md-6 col-md-offset-3">
                 <div class="heading-with-sub m-bottom-50">
                   <h3 class="title sans-font m-bottom-30">Dr. Boqing Gong</h3>
-                  <h4 class="subtitle">For more information you can contact me via boqinggo@outlook.com.</h4>
+                  <h4 class="subtitle">For more information you can contact me via <a href="mailto:boqinggo@outlook.com"><b>boqinggo@outlook.com</b></a>.</h4>
                 </div>
                 <!--div class="sp-line-0"></div>
                 <ul class="m-top-30 social-icons shape-circle skin-white hover-dark">
