Small changes to publication page

--- a/publications.html
+++ b/publications.html
@@ -123,21 +123,21 @@ http://themeforest.net/user/owwwlab/
                       <div class="contents">
                         <div class="item-meta"><span class="date">2012</span></div>
                         <div class="title-wrapper">
-                          <h2 class="title">Geodesic Flow Kernel (GFK)</h2>
+                          <h2 class="title">GFK: Geodesic Flow Kernel</h2>
                         </div>
                       </div></a></div>
                   <div class="col-md-4"><a href="https://papers.nips.cc/paper/5413-diverse-sequential-subset-selection-for-supervised-video-summarization" class="book-el set-bg"><img src="assets/img/publications/grid/02.jpg" class="set-me">
                       <div class="contents">
                         <div class="item-meta"><span class="date">2014</span></div>
                         <div class="title-wrapper">
-                          <h2 class="title">Sequential Determinantal Point Process (SeqDPP)</h2>
+                          <h2 class="title">SeqDPP: Sequential Determinantal Point Process</h2>
                         </div>
                       </div></a></div>
                   <div class="col-md-4"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html" class="book-el set-bg"><img src="assets/img/featured-items/01.jpg" class="set-me">
                       <div class="contents">
                         <div class="item-meta"><span class="date">2017</span></div>
                         <div class="title-wrapper">
-                          <h2 class="title">Curriculum Domain Adaptation: from Simulations to the Real World</h2>
+                          <h2 class="title">Simulations --> Real World</h2>
                         </div>
                       </div></a></div>
                 </div>
