--- a/publications.html
+++ b/publications.html
@@ -137,7 +137,7 @@ http://themeforest.net/user/owwwlab/
                       <div class="contents">
                         <div class="item-meta"><span class="date">2017</span></div>
                         <div class="title-wrapper">
-                          <h2 class="title">Simulations --> Real World</h2>
+                          <h2 class="title">Simulations &#x2192; Real World</h2>
                         </div>
                       </div></a></div>
                 </div>
