--- a/publications.html
+++ b/publications.html
@@ -69,12 +69,12 @@ http://themeforest.net/user/owwwlab/
               </li>
               <li><a href="students.html" title="Students"><span>Students</span></a>
               </li>
-              <li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
-              </li>
+              <!--li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
+              </li-->
               <li><a href="blog.html" title="Blog"><span>Blog</span></a>
               </li>
-              <li><a href="contact.html" title="Contact"><span>Contact</span></a>
-              </li>
+              <!--li><a href="contact.html" title="Contact"><span>Contact</span></a>
+              </li-->
             </ul>
             <!-- #####Begin icons beside menu-->
             <div class="header-icons">
@@ -154,7 +154,7 @@ http://themeforest.net/user/owwwlab/
                       &nbsp&nbsp&nbsp&nbsp
                       <a href="https://scholar.google.com/citations?user=lv9ZeVUAAAAJ&hl=en"><img src="assets/img/publications/series/google-scholar.png" alt="Google Scholar" class="pub-thumbnail" height="40" width="40"></a>
                       &nbsp&nbsp&nbsp&nbsp
-                      <a href="https://www.semanticscholar.org/author/Boqing-Gong/1760838"><img src="assets/img/publications/series/semantic-scholar.jpg" alt="Semantic Scholar" class="pub-thumbnail" height="40" width="40"></a>
+                      <a href="https://www.semanticscholar.org/author/Boqing-Gong/5475409"><img src="assets/img/publications/series/semantic-scholar.jpg" alt="Semantic Scholar" class="pub-thumbnail" height="40" width="40"></a>
                       &nbsp&nbsp&nbsp&nbsp
                       <a href="http://dblp.uni-trier.de/pers/hd/g/Gong:Boqing"><img src="assets/img/publications/series/dblp.png" alt="DBLP" class="pub-thumbnail" height="40" width="40"></a>
                       <div class="description"></div>
