--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
               </li>
               <li><a href="students.html" title="Students"><span>Students</span></a>
               </li>
-              <li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
-              </li>
+              <!--li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
+              </li-->
               <li><a href="blog.html" title="Blog"><span>Blog</span></a>
               </li>
-              <li><a href="contact.html" title="Contact"><span>Contact</span></a>
-              </li>
+              <!--li><a href="contact.html" title="Contact"><span>Contact</span></a>
+              </li-->
             </ul>
             <!-- #####Begin icons beside menu-->
             <div class="header-icons">
