--- a/publications.html
+++ b/publications.html
@@ -94,22 +94,6 @@ http://themeforest.net/user/owwwlab/
       <section id="contents">
         <!-- #####Begin page head-->
         <div class="page-head h-200 center-it ov-grad8-alpha-80 parallax-layer dark" data-img-src="assets/img/bg/02.jpg" data-parallax-mode="mode-title">
-          <div class="container">
-            <div class="tb-vcenter-wrapper">
-              <!--div class="title-wrapper vcenter">
-                <h1 class="title">Publications</h1>
-                <h2 class="description">Simple Lists are great way to display your publicatios to visitors, here is a simple list shows variations of this grid elements.</h2>
-              </div-->
-              <div class="breadcrumb-wrapper vcenter">
-                <ul class="breadcrumb">
-                  <li><a href="#"><i class="oli oli-home"></i></a></li>
-                  <li><a href="#">publication</a></li>
-                  <li><a href="#">publication type</a></li>
-                  <li>learning environment</li>
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
         <!-- #####End page head
         -->
@@ -151,11 +135,10 @@ http://themeforest.net/user/owwwlab/
                     <!--div class="content-wrapper"-->
                       <h2 class="title">Remark 1: * indicates papers whose first authors are the students whom I supervised or co-supervised. </h2>
                       <h2 class="title"> Remark 2: = indicates equal contribution among authors.</h2>
-                      &nbsp&nbsp&nbsp&nbsp
                       <a href="https://scholar.google.com/citations?user=lv9ZeVUAAAAJ&hl=en"><img src="assets/img/publications/series/google-scholar.png" alt="Google Scholar" class="pub-thumbnail" height="40" width="40"></a>
-                      &nbsp&nbsp&nbsp&nbsp
+                      &nbsp&nbsp&nbsp
                       <a href="https://www.semanticscholar.org/author/Boqing-Gong/5475409"><img src="assets/img/publications/series/semantic-scholar.jpg" alt="Semantic Scholar" class="pub-thumbnail" height="40" width="40"></a>
-                      &nbsp&nbsp&nbsp&nbsp
+                      &nbsp&nbsp&nbsp
                       <a href="http://dblp.uni-trier.de/pers/hd/g/Gong:Boqing"><img src="assets/img/publications/series/dblp.png" alt="DBLP" class="pub-thumbnail" height="40" width="40"></a>
                       <div class="description"></div>
                     <!--/div-->
@@ -186,6 +169,33 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title"><a href="#">* Improving the Improved Training of Wasserstein GANs: A Consistency Term and Its Dual Effect</a></h3>
                       <div class="description">
                         <div class="citation"><span> <a href="#">International Conference on Learning Representations <b>(ICLR)</b> 2018 </a><span class="block-elem">=X Wei, <b>=B Gong</b>, Z Liu, and L Wang</span></span></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item">
+                    <!--div class="elem-wrapper"><img src="assets/img/publications/series/cover-3.jpg" alt="item thumbnail" class="pub-thumbnail"></div-->
+                    <div class="content-wrapper">
+                      <h3 class="title"><a href="#">*  Face Detector Adaptation without Negative Transfer or Catastrophic Forgetting</a></h3>
+                      <div class="description">
+                        <div class="citation"><span> <a href="papers/wacv18.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">M A Jamal, H Li, and <b>B Gong</b></span></span></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item">
+                    <!--div class="elem-wrapper"><img src="assets/img/publications/series/cover-3.jpg" alt="item thumbnail" class="pub-thumbnail"></div-->
+                    <div class="content-wrapper">
+                      <h3 class="title"><a href="#">Geometry-Guided CNN for Self-Supervised Video Representation Learning</a></h3>
+                      <div class="description">
+                        <div class="citation"><span> <a href="papers/wacv18.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">C Gan, <b>B Gong</b>, K Liu, H Su, and L Guibas</span></span></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item">
+                    <!--div class="elem-wrapper"><img src="assets/img/publications/series/cover-3.jpg" alt="item thumbnail" class="pub-thumbnail"></div-->
+                    <div class="content-wrapper">
+                      <h3 class="title"><a href="#">End-to-End Learning of Motion Representation for Video Understanding</a></h3>
+                      <div class="description">
+                        <div class="citation"><span> <a href="papers/wacv18.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">L Fan, W Huang, C Gan, S Ermon, J Huang, and <b>B Gong</b></span></span></div>
                       </div>
                     </div>
                   </div>
