--- a/research.html
+++ b/research.html
@@ -98,7 +98,7 @@ http://themeforest.net/user/owwwlab/
             <div class="tb-vcenter-wrapper">
               <div class="title-wrapper vcenter">
                 <h1 class="title">Reseach</h1>
-                <h2 class="description">A research scientist in machine learning and computer vision, I am interested in developing data-efficient algorithms to solve large-scale visual recognition problems. My recent research has been focusing on domain adaptation, semi-supervised and self-supervised learning, few-shot and zero-shot learning, deep learning, generative models, learning from the Web, and the visual analytics of objects, human activities, scenes, and their attributes.</h2>
+                <h2 class="description"><b>A research scientist in machine learning and computer vision, I strive to understand the mathematical structure of the research questions in order to develop effective and efficient algorithmic solutions, with strong analytical properties and compelling practical performance.</b></h2>
               </div>
               <div class="breadcrumb-wrapper vcenter">
                 <ul class="breadcrumb">
@@ -287,7 +287,7 @@ http://themeforest.net/user/owwwlab/
                 <div class="row call-out tb-vcenter-wrapper">
                   <div class="col-sm-9 vcenter">
                     <h2 class="title">List of Publications</h2>
-                    <h4 class="sub-title">Work hard, make extraordinary discoveries, and publish to make the work easy and simple.</h4>
+                    <h2 class="sub-title"><b>Work hard, make extraordinary discoveries, and publish to make the work easy and simple.</b></h2>
                   </div>
                   <div class="col-sm-3 vcenter text-center"><a href="publications.html" class="btn btn-medium btn-wide btn-skin-red btn-circle"> <span>view</span></a></div>
                 </div>
