--- a/publications.html
+++ b/publications.html
@@ -133,7 +133,7 @@ http://themeforest.net/user/owwwlab/
 
                   <div class="tl-item pub-item">
                     <!--div class="content-wrapper"-->
-                      <h2 class="title">Remark 1: * indicates papers whose first authors are my students (supervised or co-supervised). </h2>
+                      <h2 class="title">Remark 1: * indicates papers first-authored by my students (supervised or co-supervised). </h2>
                       <h2 class="title"> Remark 2: = indicates equal contribution among authors.</h2>
                       <a href="https://scholar.google.com/citations?user=lv9ZeVUAAAAJ&hl=en"><img src="assets/img/publications/series/google-scholar.png" alt="Google Scholar" class="pub-thumbnail" height="40" width="40"></a>
                       &nbsp&nbsp&nbsp
@@ -166,36 +166,36 @@ http://themeforest.net/user/owwwlab/
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2018</span>
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="#">Improving the Improved Training of Wasserstein GANs: A Consistency Term and Its Dual Effect *</a></h3>
+                      <h3 class="title"><a href="https://openreview.net/forum?id=SJx9GQb0-">Improving the Improved Training of Wasserstein GANs: A Consistency Term and Its Dual Effect *</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="#">International Conference on Learning Representations <b>(ICLR)</b> 2018 </a><span class="block-elem">X Wei=, <b>B Gong=</b>, Z Liu, and L Wang</span></span></div>
+                        <div class="citation"><span> <a href="https://openreview.net/forum?id=SJx9GQb0-">International Conference on Learning Representations <b>(ICLR)</b> 2018 </a><span class="block-elem">X Wei=, <b>B Gong=</b>, Z Liu, and L Wang</span></span></div>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="#">Face Detector Adaptation without Negative Transfer or Catastrophic Forgetting *</a></h3>
+                      <h3 class="title"><a href="papers/cvpr18-deep-face.pdf">Face Detector Adaptation without Negative Transfer or Catastrophic Forgetting</a> * [<a href="papers/cvpr18-deep-face-supp.pdf">Supplementary</a>]</h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/wacv18.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">M A Jamal, H Li, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">M A Jamal, H Li, and <b>B Gong</b></span></span></div>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="#">Geometry-Guided CNN for Self-Supervised Video Representation Learning *</a></h3>
+                      <h3 class="title"><a href="papers/cvpr18-geometry-cnn.pdf">Geometry-Guided CNN for Self-Supervised Video Representation Learning</a> *</h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/wacv18.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">C Gan, <b>B Gong</b>, K Liu, H Su, and L Guibas</span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr18-geometry-cnn.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">C Gan, <b>B Gong</b>, K Liu, H Su, and L Guibas</span></span></div>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="#">End-to-End Learning of Motion Representation for Video Understanding</a></h3>
+                      <h3 class="title"><a href="papers/cvpr18-tvnet.pdf">End-to-End Learning of Motion Representation for Video Understanding</a> [<a href="papers/cvpr18-tvnet-supp.pdf">Supplementary</a>]</h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/wacv18.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">L Fan, W Huang, C Gan, S Ermon, J Huang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr18-tvnet.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a> <b><font color="blue">(Spotlight)</font></b><span class="block-elem">L Fan, W Huang, C Gan, S Ermon, J Huang, and <b>B Gong</b></span></span></div>
                       </div>
                     </div>
                   </div>
@@ -211,7 +211,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2017</span>
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">Curriculum Domain Adaptation for Semantic Segmentation of Urban Scenes*</a></h3>
+                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">Curriculum Domain Adaptation for Semantic Segmentation of Urban Scenes *</a></h3>
                       <div class="description">
                         <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">IEEE International Conference on Computer Vision <b>(ICCV)</b> 2017 </a><span class="block-elem">Y Zhang, P David, and <b>B Gong</b></span></span></div>
                       </div>
