--- a/publications.html
+++ b/publications.html
@@ -137,7 +137,7 @@ http://themeforest.net/user/owwwlab/
                       <h2 class="title"> Remark 2: = indicates equal contribution among authors.</h2>
                       <a href="https://scholar.google.com/citations?user=lv9ZeVUAAAAJ&hl=en"><img src="assets/img/publications/series/google-scholar.png" alt="Google Scholar" class="pub-thumbnail" height="40" width="40"></a>
                       &nbsp&nbsp&nbsp
-                      <a href="https://www.semanticscholar.org/author/Boqing-Gong/5475409"><img src="assets/img/publications/series/semantic-scholar.jpg" alt="Semantic Scholar" class="pub-thumbnail" height="40" width="40"></a>
+                      <a href="https://www.semanticscholar.org/search?q=Boqing%20gong&sort=relevance"><img src="assets/img/publications/series/semantic-scholar.jpg" alt="Semantic Scholar" class="pub-thumbnail" height="40" width="40"></a>
                       &nbsp&nbsp&nbsp
                       <a href="http://dblp.uni-trier.de/pers/hd/g/Gong:Boqing"><img src="assets/img/publications/series/dblp.png" alt="DBLP" class="pub-thumbnail" height="40" width="40"></a>
                       <div class="description"></div>
@@ -267,7 +267,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="papers/acii17.pdf">Weighted Geodesic Flow Kernel for Interpersonal Mutual Inuence Modeling and Emotion Recognition in Dyadic Interactions</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/acii17.pdf">Affective Computing and Intelligence Interaction   <b>(ACII, Oral)</b> 2017 </a><span class="block-elem">Z Yang, <b>B Gong</b>, and S Narayanan</span></span></div>
+                        <div class="citation"><span> <a href="papers/acii17.pdf">Affective Computing and Intelligence Interaction   <b>(ACII)</b> 2017 </a> <b><font color="blue">(Oral)</font></b><span class="block-elem">Z Yang, <b>B Gong</b>, and S Narayanan</span></span></div>
                       </div>
                     </div>
                   </div>
@@ -304,7 +304,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="https://arxiv.org/abs/1605.04253">An Empirical Study and Analysis of Generalized Zero-Shot Learning for Object Recognition in the Wild</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="https://arxiv.org/abs/1605.04253">European Conference on Computer Vision <b>(ECCV, Spotlight)</b> 2016 </a><span class="block-elem">=WL Chao, =S Changpinyo, <b>B Gong</b>, and F Sha</span></span></div>
+                        <div class="citation"><span> <a href="https://arxiv.org/abs/1605.04253">European Conference on Computer Vision <b>(ECCV)</b> 2016 </a> <b><font color="blue">(Spotlight)</font></b><span class="block-elem">=WL Chao, =S Changpinyo, <b>B Gong</b>, and F Sha</span></span></div>
                       </div>
                     </div>
                   </div>
@@ -322,7 +322,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/html/Gan_Learning_Attributes_Equals_CVPR_2016_paper.html">Learning Attributes Equals Multi-Source Domain Generalization *</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/html/Gan_Learning_Attributes_Equals_CVPR_2016_paper.html">IEEE International Conference on Computer Vision and Pattern Recognition <b>(CVPR, Spotlight)</b> 2016 </a><span class="block-elem">C Gan, T Yang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/html/Gan_Learning_Attributes_Equals_CVPR_2016_paper.html">IEEE International Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2016 </a> <b><font color="blue">(Spotlight)</font></b><span class="block-elem">C Gan, T Yang, and <b>B Gong</b></span></span></div>
                       </div>
                     </div>
                   </div>
@@ -331,7 +331,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/html/Changpinyo_Synthesized_Classifiers_for_CVPR_2016_paper.html">Synthesized Classifiers for Zero-Shot Learning</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/html/Changpinyo_Synthesized_Classifiers_for_CVPR_2016_paper.html">IEEE International Conference on Computer Vision and Pattern Recognition <b>(CVPR, Oral)</b> 2016 </a><span class="block-elem">=S Changpinyo, =WL Chao, <b>B Gong</b>, and F Sha</span></span></div>
+                        <div class="citation"><span> <a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/html/Changpinyo_Synthesized_Classifiers_for_CVPR_2016_paper.html">IEEE International Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2016 </a> <b><font color="blue">(Oral)</font></b><span class="block-elem">=S Changpinyo, =WL Chao, <b>B Gong</b>, and F Sha</span></span></div>
                       </div>
                     </div>
                   </div>
@@ -386,7 +386,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="http://proceedings.mlr.press/v28/gong13.html">Connecting the Dots with Landmarks: Discriminatively Learning Domain-Invariant Features for Unsupervised Domain Adaptation</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="http://proceedings.mlr.press/v28/gong13.html">International Conference on Machine Learning <b>(ICML, Oral)</b>, 2013 </a><span class="block-elem"><b>B Gong</b>, K Grauman, and F Sha</span></span></div>
+                        <div class="citation"><span> <a href="http://proceedings.mlr.press/v28/gong13.html">International Conference on Machine Learning <b>(ICML)</b>, 2013 </a> <b><font color="blue">(Oral)</font></b><span class="block-elem"><b>B Gong</b>, K Grauman, and F Sha</span></span></div>
                       </div>
                     </div>
                   </div>
@@ -413,7 +413,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="papers/cvpr12.pdf">Geodesic Flow Kernel for Unsupervised Domain Adaptation </a><a href="papers/cvpr12-supp.pdf">[Supp]</a> <a href="papers/cvpr12-slides.pptx">[Slides]</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/cvpr12.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR, Oral)</b>, 2012 </a><span class="block-elem"><b>B Gong</b>, Y Shi, F Sha, and K Grauman</span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr12.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2012 </a> <b><font color="blue">(Oral)</font></b><span class="block-elem"><b>B Gong</b>, Y Shi, F Sha, and K Grauman</span></span></div>
                       </div>
                     </div>
                   </div>
@@ -422,7 +422,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="papers/bigvision12.pdf">Overcoming Dataset Bias: An Unsupervised Domain Adaptation Approach </a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/bigvision12.pdf">NIPS Workshop on Large Scale Visual Recognition and Retrieval  <b>(BigVision, Oral)</b>, 2012 </a><span class="block-elem"><b>B Gong</b>, F Sha, and K Grauman</span></span></div>
+                        <div class="citation"><span> <a href="papers/bigvision12.pdf">NIPS Workshop on Large Scale Visual Recognition and Retrieval  <b>(BigVision)</b>, 2012 </a> <b><font color="blue">(Oral)</font></b><span class="block-elem"><b>B Gong</b>, F Sha, and K Grauman</span></span></div>
                       </div>
                     </div>
                   </div>
